syntax = "proto3";

package J2KResultsHub;

option go_package = "./";

service ResultsHub {
  // NOTE: for those rpcs, if the call fails, the pod should repeat, 
  // the call will eventually success when the broker recovers
  rpc ClaimCellFinished (VarResults) returns (Empty) {}
  rpc FetchVarResult (FetchVarResultRequest) returns (VarResult) {}
  // The Ping-Pong service for cluster testing, remove in future
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message VarResults {
  uint32 cellNumber = 1;
  repeated VarResult varResuls = 2;
}

// The result of a single variable of a specific cell
message VarResult {
  string varName = 1;
  string varType = 2;
  bytes varBytes = 3;
  bool available = 4; // for ResultsHub internal use
  bool isJson = 5;
  string jsonString = 6;
}

message FetchVarResultRequest {
  string varName = 1;
  uint32 varAncestorCell = 2;
}

message Empty {}

// The request message containing the sender's ID and a message.
message HelloRequest {
  string senderId = 1;
  string message = 2;
}

// The response message containing the reply.
message HelloReply {
  string message = 1;
}
