syntax = "proto3";

package J2KSerializer;

option go_package = "./";

service BrokerService {
  // NOTE: claim cell finished implies having no more FS access
  rpc ClaimCellFinished (VarResults) returns (Empty) {}
  rpc FetchVarResult (FetchVarResultRequest) returns (VarResult) {}
  // The Ping-Pong service for cluster testing, remove in future
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message VarResults {
  repeated VarResults varResults = 1;
}

// The result of a single variable of a specific cell
message VarResult {
  string varName = 1;
  string varType = 2;
  VarValue varValye = 3;
}

message VarValue {
    oneof value {
        bool bool_value = 1;
        int32 int32_value = 2;
        int64 int64_value = 3;
        uint32 uint32_value = 4;
        uint64 uint64_value = 5;
        float float_value = 6;
        double double_value = 7;
        string string_value = 8;
        bytes bytes_value = 9;
    }
}

message FetchVarResultRequest {
  string varName = 1;
  repeated int32 ancestorCells = 2;
}

message Empty {}

// The request message containing the sender's ID and a message.
message HelloRequest {
  string senderId = 1;
  string message = 2;
}

// The response message containing the reply.
message HelloReply {
  string message = 1;
}
